--- a/Shield/app/src/main/res/values/strings.xml
+++ b/Shield/app/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_bottom_navigation_main">MainActivity</string>
     <string name="notification_settings">Notification Settings</string>
-    <string name="action_shield">Shield</string>
+    <string name="action_start_shield">Start Shielding</string>
+    <string name="action_stop_shield">Start Shielding</string>
 
 </resources>
