--- a/Shield/app/src/main/res/values/strings.xml
+++ b/Shield/app/src/main/res/values/strings.xml
@@ -94,5 +94,7 @@
     <string name="placeholder_qr_code">QR Code</string>
     <string name="placeholder_qr_code_prompt">Your QR code is private. If you share it with someone they can scan it with their Shield camera to add you as a close friend.</string>
     <string name="action_share_barcode">Share</string>
+    <string name="action_clear_logs">Clear Logs</string>
+    <string name="settings_delete_account">Delete My Account</string>
 
 </resources>
