--- a/Shield/app/src/main/res/values/strings.xml
+++ b/Shield/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
     <string name="disconnect">Disconnect</string>
     <string name="done">Done</string>
     <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
-    <string name="exposed_text">You may have been exposed to a CVOID-19 patient</string>
-    <string name="exposed_text2">Please contact your healthcare professional.</string>
+    <string name="exposed_text">You may have been exposed to a COVID-19 patient</string>
+    <string name="exposed_text2">during </string>
     <string name="foreground_notification_action_stop">Stop</string>
     <string name="foreground_notification_content_title">Shield is now running in the background</string>
     <string name="invite">Invite Friends</string>
