--- a/Shield/app/src/main/res/values/strings.xml
+++ b/Shield/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
     <string name="exposed_text">You may have been exposed to a COVID-19 patient</string>
     <string name="exposed_text2">during </string>
+    <string name="you_were_exposed">You were exposed</string>
     <string name="foreground_notification_action_stop">Stop</string>
     <string name="foreground_notification_content_title">Shield is now running in the background</string>
     <string name="invite">Invite Friends</string>
